force-app/main/default/objects/Integration_Log__c/fields/DML__c.field-meta.xml
<CustomField>
    <fullName>DML__c</fullName>
    <label>DML</label>
    <length>255</length>
    <type>Text</type>
</CustomField>