force-app/main/default/objects/Integration_Log__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Creation</fullName>
            </value>
            <value>
                <fullName>Account Registration</fullName>
            </value>
            <value>
                <fullName>Order Creation</fullName>
            </value>
            <value>
                <fullName>Order Update</fullName>
            </value>
            <value>
                <fullName>Payment Creation</fullName>
            </value>
            <value>
                <fullName>Payment Update</fullName>
            </value>
            <value>
                <fullName>VIN Verification</fullName>
            </value>
            <value>
                <fullName>Service Appointment creation</fullName>
            </value>
            <value>
                <fullName>Case creation</fullName>
            </value>
            <value>
                <fullName>Service Milestone Notification</fullName>
            </value>
            <value>
                <fullName>Ozontel WhatsApp</fullName>
            </value>
            <value>
                <fullName>Lead Creation - BikeDekho</fullName>
            </value>
            <value>
                <fullName>Lead Creation - 91Wheels</fullName>
            </value>
            <value>
                <fullName>Lead Creation - HT Auto</fullName>
            </value>
            <value>
                <fullName>Lead Creation - ThinkResult</fullName>
            </value>
            <value>
                <fullName>Lead Creation - WhatsApp</fullName>
            </value>
            <value>
                <fullName>Lead Creation - CarBike360</fullName>
            </value>
            <value>
                <fullName>Lead Creation - EV India</fullName>
            </value>
            <value>
                <fullName>Lead Creation - OzoneTel</fullName>
            </value>
            <value>
                <fullName>Lead creation - BikeWale</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>