force-app/main/default/objects/Integration_Log__c/fields/Responses__c.field-meta.xml
<CustomField>
    <fullName>Responses__c</fullName>
    <label>Responses</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>