force-app/main/default/objects/Integration_Log__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Lead</fullName>
            </value>
            <value>
                <fullName>Lead Age 2 Days</fullName>
            </value>
            <value>
                <fullName>RNR Stage</fullName>
            </value>
            <value>
                <fullName>Test Ride Scheduled</fullName>
            </value>
            <value>
                <fullName>On Test Ride Day</fullName>
            </value>
            <value>
                <fullName>Test Ride Cancelled</fullName>
            </value>
            <value>
                <fullName>Test Ride Completed</fullName>
            </value>
            <value>
                <fullName>Lead Unresponsive 4 Days</fullName>
            </value>
            <value>
                <fullName>Lead Unresponsive 7 Days</fullName>
            </value>
            <value>
                <fullName>Order Creation</fullName>
            </value>
            <value>
                <fullName>Allotment in Process(Order)</fullName>
            </value>
            <value>
                <fullName>RTO Stage(Order)</fullName>
            </value>
            <value>
                <fullName>Ready For Delivery(Order)</fullName>
            </value>
            <value>
                <fullName>Vehicle Delivered(Order)</fullName>
            </value>
            <value>
                <fullName>Order Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>