force-app/main/default/objects/Integration_Log__c/listViews/Today_s_Integration_Logs.listView-meta.xml
<ListView>
    <fullName>Today_s_Integration_Logs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Integration_Type__c</columns>
    <columns>Response_Payload__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Integration Logs</label>
</ListView>